[feat] Add FileLoaderTask
- Introduced `FileLoaderTask` file loading, allowing for efficient document handling from the filesystem.

--- a/packages/ai-provider/tsconfig.json
+++ b/packages/ai-provider/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["src/index.ts", "src/*/**/*"],
-  "files": ["src/types.ts"],
+  "files": ["./src/types.ts"],
   "exclude": ["dist", "node_modules"],
   "compilerOptions": {
     "composite": true,
