--- a/packages/tasks/package.json
+++ b/packages/tasks/package.json
@@ -60,5 +60,8 @@
     "@workglow/storage": "workspace:*",
     "@workglow/task-graph": "workspace:*",
     "@workglow/util": "workspace:*"
+  },
+  "dependencies": {
+    "csv-parse": "^6.1.0"
   }
 }
