[feat] Enhance documentation for rate limiters
- Enabled Git LFS support in the devcontainer configuration.
- Updated architecture documentation to clarify rate limiter implementations and their storage backends.
- Refactored job-queue README to reflect changes in rate limiter usage and storage integration.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,9 @@
   "postAttachCommand": "bash -c 'if [ -z \"$(git config --global user.name)\" ]; then read -p \"Enter your git name: \" git_name && git config --global user.name \"$git_name\" || true; fi; if [ -z \"$(git config --global user.email)\" ]; then read -p \"Enter your git email: \" git_email && git config --global user.email \"$git_email\" || true; fi'",
 
   "features": {
-    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/git:1": {
+      "lfs": true
+    },
     "ghcr.io/devcontainers/features/python:1": { "version": "3.12" }
   }
 }
