--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -36,7 +36,7 @@
     "access": "public"
   },
   "dependencies": {
-    "json-schema-library": "^10.5.1",
+    "@sroussey/json-schema-library": "^10.5.3",
     "@sroussey/json-schema-to-ts": "3.1.3"
   }
 }
