[test] Add RAGDocsPipeline test suite for retrieval-augmented generation
- Introduced a comprehensive test suite for the RAG (Retrieval-Augmented Generation) pipeline, covering both ingestion and search functionalities.
- Implemented various tasks including file loading, structural parsing, chunking, embedding, and vector storage within a TaskGraph.
- Validated the serialization of the pipeline to JSON and ensured the integrity of dataflows and task structures.
- Added tests for complete RAG pipeline execution, including document ingestion and search capabilities, with assertions for expected outcomes.

--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -19,8 +19,8 @@
     ".": {
       "react-native": "./dist/browser.js",
       "browser": "./dist/browser.js",
-      "bun": "./dist/browser.js",
-      "types": "./dist/types.d.ts",
+      "bun": "./src/browser.ts",
+      "types": "./src/types.ts",
       "import": "./dist/browser.js"
     }
   },
