--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -45,8 +45,8 @@
     ".": {
       "react-native": "./dist/browser.js",
       "browser": "./dist/browser.js",
-      "bun": "./dist/bun.js",
-      "types": "./dist/types.d.ts",
+      "bun": "./src/bun.ts",
+      "types": "./src/types.ts",
       "import": "./dist/node.js"
     }
   },
