--- a/packages/ai-provider/package.json
+++ b/packages/ai-provider/package.json
@@ -17,8 +17,8 @@
   },
   "exports": {
     ".": {
-      "bun": "./dist/index.js",
-      "types": "./dist/types.d.ts",
+      "bun": "./src/index.ts",
+      "types": "./src/types.ts",
       "import": "./dist/index.js"
     }
   },
