[refactor] Transition from Repository to Storage or Dataset Naming Convention
- Updated the codebase to replace references from `repository` to `dataset`, enhancing clarity in data management terminology.
- Refactored various tasks and schemas to align with the new dataset structure, including `DocumentChunkDataset` and `DocumentDataset`.
- Removed deprecated chunk vector storage components and introduced new vector storage implementations for PostgreSQL and SQLite.
- Enhanced the TODO list with new items related to dataset management and improved documentation to reflect these changes.
- Updated tests to ensure compatibility with the new dataset naming and structure.

--- a/packages/dataset/tsconfig.json
+++ b/packages/dataset/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "include": ["src/common.ts", "src/common-server.ts", "src/*/**/*"],
   "files": ["./src/types.ts"],
-  "exclude": ["dist", "src/chunk-vector/PostgresChunkVectorStorage.ts", "src/chunk-vector/SqliteChunkVectorStorage.ts"],
+  "exclude": ["dist"],
   "compilerOptions": {
     "composite": true,
     "outDir": "./dist",
