[chore] Update GitHub Actions Workflow to Use Latest Bun Version

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
       - run: bun i
-      - run: bun run build
+      - run: bun run rebuild
       - run: bun test
