[refactor] Update Storage Naming and change csv parsing so we can have in browser
- Replaced instances of `Repository` with `Storage` across the codebase to enhance clarity in data management terminology.
- Updated `bun.lock` and `package.json` to switch from `csv-parse` to `papaparse` for CSV parsing functionality, including the addition of `@types/papaparse`.
- Refactored related tasks and schemas to align with the new naming convention, ensuring consistency throughout the project.
- Adjusted documentation and README files to reflect these changes and improve overall clarity.

--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -19,7 +19,7 @@
     ".": {
       "react-native": "./dist/browser.js",
       "browser": "./dist/browser.js",
-      "bun": "./dist/browser.js",
+      "bun": "./src/browser.ts",
       "types": "./dist/types.d.ts",
       "import": "./dist/browser.js"
     }
