--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -19,7 +19,7 @@
     ".": {
       "react-native": "./dist/browser.js",
       "browser": "./dist/browser.js",
-      "bun": "./src/browser.ts",
+      "bun": "./dist/browser.js",
       "types": "./dist/types.d.ts",
       "import": "./dist/browser.js"
     }
