[chore] Update bun version in release workflow
- Set bun-version to latest in the release workflow to ensure the most up-to-date features and fixes are utilized during dependency installation.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
 
       - uses: oven-sh/setup-bun@v2
         with:
+          bun-version: latest
           registry-url: "https://registry.npmjs.org/"
 
       - name: Install dependencies
