[chore] Update dependencies across multiple packages
- Bumped versions of various dependencies in bun.lock and package.json files, including caniuse-lite, @types/bun, @typescript-eslint packages, globals, prettier, turbo, react, react-dom, and vitest.
- Updated peer dependencies for better-sqlite3, pg, and @supabase/supabase-js in storage and test packages to ensure compatibility with the latest versions.
- Adjusted devDependencies in examples/web and packages/sqlite for improved functionality and consistency.

--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -22,8 +22,8 @@
   "peerDependencies": {
     "@workglow/sqlite": "workspace:*",
     "@workglow/util": "workspace:*",
-    "pg": "^8.16.3",
-    "@supabase/supabase-js": "^2.93.2"
+    "pg": "^8.18.0",
+    "@supabase/supabase-js": "=2.94.0"
   },
   "peerDependenciesMeta": {
     "@workglow/sqlite": {
@@ -36,9 +36,9 @@
   "devDependencies": {
     "@workglow/sqlite": "workspace:*",
     "@workglow/util": "workspace:*",
-    "pg": "^8.16.3",
-    "@types/pg": "^8.15.5",
-    "@supabase/supabase-js": "^2.93.2",
+    "pg": "^8.18.0",
+    "@types/pg": "^8.16.0",
+    "@supabase/supabase-js": "=2.94.0",
     "fake-indexeddb": "^6.2.4"
   },
   "exports": {
