--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
     "publish": "bun ./scripts/publish-workspaces.ts"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30001767"
+    "caniuse-lite": "^1.0.30001769"
   },
   "catalog": {
     "@sroussey/transformers": "3.8.2",
-    "@mediapipe/tasks-text": "^0.10.22-rc.20250304",
-    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
-    "@mediapipe/tasks-audio": "^0.10.22-rc.20250304",
-    "@mediapipe/tasks-genai": "^0.10.22-rc.20250304"
+    "@mediapipe/tasks-text": "^0.10.32",
+    "@mediapipe/tasks-vision": "^0.10.32",
+    "@mediapipe/tasks-audio": "^0.10.32",
+    "@mediapipe/tasks-genai": "^0.10.26"
   },
   "devDependencies": {
     "@sroussey/changesets-cli": "^2.29.7",
-    "@types/bun": "^1.3.8",
-    "@typescript-eslint/eslint-plugin": "^8.54.0",
-    "@typescript-eslint/parser": "^8.54.0",
+    "@types/bun": "^1.3.9",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -54,7 +54,7 @@
     "eslint-plugin-regexp": "^2.10.0",
     "globals": "^17.3.0",
     "prettier": "^3.8.1",
-    "turbo": "^2.8.3",
+    "turbo": "^2.8.6",
     "typescript": "5.9.3",
     "vitest": "^4.0.18"
   },
