[feat] Enhance AI SDK integration with new model factories and task adapters
- Added ModelInstanceFactory to manage language, embedding, and image model registrations.
- Introduced V3TaskAdapters for executing tasks via V3 models, supporting text generation and embedding tasks.
- Updated AiJob to utilize new task execution paths, enhancing compatibility with V3 models.
- Registered AI SDK providers for worker execution, enabling streamlined model access and task processing.
- Enhanced package dependencies to include new AI SDK packages for improved functionality.

--- a/packages/ai-provider/package.json
+++ b/packages/ai-provider/package.json
@@ -35,6 +35,10 @@
     "@workglow/storage": "workspace:*",
     "@workglow/task-graph": "workspace:*",
     "@workglow/util": "workspace:*",
+    "@ai-sdk/openai": "^3.0.28",
+    "@ai-sdk/anthropic": "^3.0.43",
+    "@ai-sdk/google": "^3.0.29",
+    "ai-sdk-ollama": "^3.7.0",
     "@sroussey/transformers": "catalog:",
     "@mediapipe/tasks-text": "catalog:",
     "@mediapipe/tasks-vision": "catalog:",
@@ -56,6 +60,18 @@
     },
     "@workglow/util": {
       "optional": false
+    },
+    "@ai-sdk/openai": {
+      "optional": true
+    },
+    "@ai-sdk/anthropic": {
+      "optional": true
+    },
+    "@ai-sdk/google": {
+      "optional": true
+    },
+    "ai-sdk-ollama": {
+      "optional": true
     }
   },
   "devDependencies": {
@@ -64,10 +80,15 @@
     "@workglow/storage": "workspace:*",
     "@workglow/task-graph": "workspace:*",
     "@workglow/util": "workspace:*",
+    "@ai-sdk/openai": "^3.0.28",
+    "@ai-sdk/anthropic": "^3.0.43",
+    "@ai-sdk/google": "^3.0.29",
+    "ai-sdk-ollama": "^3.7.0",
     "@sroussey/transformers": "catalog:",
     "@mediapipe/tasks-text": "catalog:",
     "@mediapipe/tasks-vision": "catalog:",
     "@mediapipe/tasks-audio": "catalog:",
-    "@mediapipe/tasks-genai": "catalog:"
+    "@mediapipe/tasks-genai": "catalog:",
+    "@ai-sdk/provider": "3.0.8"
   }
 }
