[feat] Enhance streaming capabilities to be per-port not per-task.
- Added support for streaming output in various AI tasks, including TextGenerationTask, TextQuestionAnswerTask, and TextRewriterTask, allowing real-time data processing.
- Updated task registration and execution methods to accommodate new streaming functionalities, improving responsiveness.
- Refactored package dependencies in bun.lock and package.json to use catalog references for better version management.
- Introduced new streaming-related UI components and styles in the web examples, enhancing user experience during task execution.
- Improved task graph handling for streaming events, ensuring accurate updates and visual feedback in the UI.

--- a/packages/ai-provider/package.json
+++ b/packages/ai-provider/package.json
@@ -40,10 +40,10 @@
     "@mediapipe/tasks-vision": "catalog:",
     "@mediapipe/tasks-audio": "catalog:",
     "@mediapipe/tasks-genai": "catalog:",
-    "openai": "^6.22.0",
-    "@anthropic-ai/sdk": "^0.74.0",
-    "@google/generative-ai": "^0.24.1",
-    "ollama": "^0.6.3"
+    "openai": "catalog:",
+    "@anthropic-ai/sdk": "catalog:",
+    "@google/generative-ai": "catalog:",
+    "ollama": "catalog:"
   },
   "peerDependenciesMeta": {
     "@workglow/ai": {
@@ -75,8 +75,8 @@
     }
   },
   "devDependencies": {
-    "@anthropic-ai/sdk": "^0.74.0",
-    "@google/generative-ai": "^0.24.1",
+    "@anthropic-ai/sdk": "catalog:",
+    "@google/generative-ai": "catalog:",
     "@mediapipe/tasks-audio": "catalog:",
     "@mediapipe/tasks-genai": "catalog:",
     "@mediapipe/tasks-text": "catalog:",
@@ -87,7 +87,7 @@
     "@workglow/storage": "workspace:*",
     "@workglow/task-graph": "workspace:*",
     "@workglow/util": "workspace:*",
-    "ollama": "^0.6.3",
-    "openai": "^6.22.0"
+    "ollama": "catalog:",
+    "openai": "catalog:"
   }
 }
