--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "@mediapipe/tasks-text": "^0.10.32",
     "@mediapipe/tasks-vision": "^0.10.32",
     "@mediapipe/tasks-audio": "^0.10.32",
-    "@mediapipe/tasks-genai": "^0.10.26"
+    "@mediapipe/tasks-genai": "^0.10.26",
+    "@anthropic-ai/sdk": "^0.74.0",
+    "@google/generative-ai": "^0.24.1",
+    "ollama": "^0.6.3",
+    "openai": "^6.22.0"
   },
   "devDependencies": {
     "@sroussey/changesets-cli": "^2.29.7",
