[feat] Introduce workglow meta-package for streamlined AI integration
- Added a new `workglow` package that re-exports all `@workglow/*` packages for convenient single-import usage.
- Updated `package.json` and `bun.lock` to include new dependencies and peer dependencies for the `workglow` package.
- Enhanced the watch script in `package.json` to include the new `workflow` package.
- Created initial structure for the `workglow` package, including TypeScript configuration, source files, and README documentation.
- Implemented exports for various AI providers, enabling easy access to their functionalities through the `workglow` package.
- Documented installation and usage instructions in the README for user convenience.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "watch": "turbo run watch --concurrency 15",
     "watch-types": "turbo run watch-types --concurrency 15",
     "dev": "turbo run dev",
-    "watch:packages": "concurrently --kill-others -c 'auto' -n sqlite,util,storage,job-queue,task-graph,tasks,ai,provider,test 'cd packages/sqlite && bun run watch' 'cd packages/util && bun run watch' 'cd packages/storage && bun run watch' 'cd packages/job-queue && bun run watch' 'cd packages/task-graph && bun run watch' 'cd packages/tasks && bun run watch' 'cd packages/ai && bun run watch' 'cd packages/ai-provider && bun run watch' 'cd packages/test && bun run watch'",
+    "watch:packages": "concurrently --kill-others -c 'auto' -n sqlite,util,storage,job-queue,task-graph,tasks,ai,provider,test,workflow 'cd packages/sqlite && bun run watch' 'cd packages/util && bun run watch' 'cd packages/storage && bun run watch' 'cd packages/job-queue && bun run watch' 'cd packages/task-graph && bun run watch' 'cd packages/tasks && bun run watch' 'cd packages/ai && bun run watch' 'cd packages/ai-provider && bun run watch' 'cd packages/test && bun run watch' 'cd packages/workflow && bun run watch'",
     "docs": "typedoc",
     "format": "eslint --fix && prettier \"{packages,examples}/*/src/**/*.{js,ts,tsx,json}\" --check --write",
     "build:release": "turbo run build-package",
