[release] Bump version to 0.0.91 for all packages and update changelogs
- Updated all packages to version 0.0.91, reflecting new features and improvements.
- Added support for AI providers like OpenAI and streaming capabilities across various packages.
- Updated dependencies in changelogs to ensure consistency and compatibility.
- Enhanced documentation to reflect the latest changes and improvements in functionality.

--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -1,7 +1,7 @@
 {
   "name": "workglow",
   "type": "module",
-  "version": "0.0.90",
+  "version": "0.0.91",
   "description": "Workglow meta-package: re-exports all @workglow/* packages for convenient single-import usage.",
   "scripts": {
     "watch": "concurrently -c 'auto' 'bun:watch-*'",
@@ -50,7 +50,8 @@
     },
     "./tf-mediapipe": {
       "browser": "./dist/tf-mediapipe.js",
-      "types": "./dist/tf-mediapipe.d.ts"
+      "types": "./dist/tf-mediapipe.d.ts",
+      "bun": "./dist/tf-mediapipe.js"
     }
   },
   "files": [
