[feat] better exports
- Updated package.json scripts to include new build and watch commands for browser and node targets.
- Introduced new browser-specific entry points for AI providers (Ollama, Anthropic, Google Gemini, Hugging Face) to facilitate browser compatibility.
- Added Ollama-specific functions for text generation, embedding, rewriting, and summarization, supporting both standard and streaming operations.
- Refactored existing Ollama job functions to streamline SDK loading and improve error handling.
- Enhanced the overall structure of the AI provider package to support new functionalities and improve modularity.

--- a/packages/workglow/package.json
+++ b/packages/workglow/package.json
@@ -5,15 +5,19 @@
   "description": "Workglow meta-package: re-exports all @workglow/* packages for convenient single-import usage.",
   "scripts": {
     "watch": "concurrently -c 'auto' 'bun:watch-*'",
-    "watch-code": "bun build --watch --no-clear-screen --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/browser.ts ./src/node.ts ./src/bun.ts ./src/anthropic.ts ./src/google-gemini.ts ./src/hf-transformers.ts ./src/ollama.ts ./src/openai.ts ./src/tf-mediapipe.ts",
+    "watch-browser": "bun build --watch --no-clear-screen --target=browser --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/browser.ts ./src/anthropic.browser.ts ./src/google-gemini.browser.ts ./src/hf-transformers.browser.ts ./src/ollama.browser.ts ./src/openai.browser.ts ./src/tf-mediapipe.ts",
+    "watch-node": "bun build --watch --no-clear-screen --target=node --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/node.ts ./src/anthropic.ts ./src/google-gemini.ts ./src/hf-transformers.ts ./src/ollama.ts ./src/openai.ts",
+    "watch-bun": "bun build --watch --no-clear-screen --target=bun --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/bun.ts ./src/anthropic.bun.ts ./src/google-gemini.bun.ts ./src/hf-transformers.bun.ts ./src/ollama.bun.ts ./src/openai.bun.ts",
     "watch-types": "tsc --watch --preserveWatchOutput",
-    "build-package": "bun run build-clean && bun run build-code && bun run build-types",
+    "build-package": "bun run build-clean && concurrently -c 'auto' -n 'browser,node,bun,types' 'bun run build-browser' 'bun run build-node' 'bun run build-bun' 'bun run build-types'",
     "build-clean": "rm -fr dist/*",
-    "build-code": "bun build --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/browser.ts ./src/node.ts ./src/bun.ts ./src/anthropic.ts ./src/google-gemini.ts ./src/hf-transformers.ts ./src/ollama.ts ./src/openai.ts ./src/tf-mediapipe.ts",
+    "build-browser": "bun build --target=browser --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/browser.ts ./src/anthropic.browser.ts ./src/google-gemini.browser.ts ./src/hf-transformers.browser.ts ./src/ollama.browser.ts ./src/openai.browser.ts ./src/tf-mediapipe.ts",
+    "build-node": "bun build --target=node --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/node.ts ./src/anthropic.ts ./src/google-gemini.ts ./src/hf-transformers.ts ./src/ollama.ts ./src/openai.ts",
+    "build-bun": "bun build --target=bun --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/bun.ts ./src/anthropic.bun.ts ./src/google-gemini.bun.ts ./src/hf-transformers.bun.ts ./src/ollama.bun.ts ./src/openai.bun.ts",
     "build-types": "rm -f tsconfig.tsbuildinfo && tsc",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "bun test",
-    "prepare": "node -e \"const pkg=require('./package.json');pkg.exports['.'].bun='./dist/bun.js';pkg.exports['.'].types='./dist/types.d.ts';['anthropic','google-gemini','hf-transformers','ollama','openai','tf-mediapipe'].forEach(p=>{const k='./'+p;if(!pkg.exports[k])pkg.exports[k]={};pkg.exports[k].bun='./dist/'+p+'.js';pkg.exports[k].types='./dist/'+p+'.d.ts'});require('fs').writeFileSync('package.json',JSON.stringify(pkg,null,2))\""
+    "prepare": "node -e \"const pkg=require('./package.json');pkg.exports['.'].bun='./dist/bun.js';pkg.exports['.'].types='./dist/types.d.ts';['anthropic','google-gemini','hf-transformers','ollama','openai'].forEach(p=>{const k='./'+p;if(!pkg.exports[k])pkg.exports[k]={};pkg.exports[k].browser='./dist/'+p+'.browser.js';pkg.exports[k].bun='./dist/'+p+'.bun.js';pkg.exports[k].types='./dist/'+p+'.d.ts'});const t=pkg.exports['./tf-mediapipe'];if(!t)pkg.exports['./tf-mediapipe']={};pkg.exports['./tf-mediapipe'].browser='./dist/tf-mediapipe.js';pkg.exports['./tf-mediapipe'].types='./dist/tf-mediapipe.d.ts';delete pkg.exports['./tf-mediapipe'].bun;require('fs').writeFileSync('package.json',JSON.stringify(pkg,null,2))\""
   },
   "exports": {
     ".": {
@@ -24,34 +28,38 @@
       "import": "./dist/node.js"
     },
     "./anthropic": {
-      "bun": "./dist/anthropic.js",
+      "browser": "./dist/anthropic.browser.js",
+      "bun": "./dist/anthropic.bun.js",
       "types": "./dist/anthropic.d.ts",
       "import": "./dist/anthropic.js"
     },
     "./google-gemini": {
-      "bun": "./dist/google-gemini.js",
+      "browser": "./dist/google-gemini.browser.js",
+      "bun": "./dist/google-gemini.bun.js",
       "types": "./dist/google-gemini.d.ts",
       "import": "./dist/google-gemini.js"
     },
     "./hf-transformers": {
-      "bun": "./dist/hf-transformers.js",
+      "browser": "./dist/hf-transformers.browser.js",
+      "bun": "./dist/hf-transformers.bun.js",
       "types": "./dist/hf-transformers.d.ts",
       "import": "./dist/hf-transformers.js"
     },
     "./ollama": {
-      "bun": "./dist/ollama.js",
+      "browser": "./dist/ollama.browser.js",
+      "bun": "./dist/ollama.bun.js",
       "types": "./dist/ollama.d.ts",
       "import": "./dist/ollama.js"
     },
     "./openai": {
-      "bun": "./dist/openai.js",
+      "browser": "./dist/openai.browser.js",
+      "bun": "./dist/openai.bun.js",
       "types": "./dist/openai.d.ts",
       "import": "./dist/openai.js"
     },
     "./tf-mediapipe": {
       "browser": "./dist/tf-mediapipe.js",
-      "types": "./dist/tf-mediapipe.d.ts",
-      "bun": "./dist/tf-mediapipe.js"
+      "types": "./dist/tf-mediapipe.d.ts"
     }
   },
   "files": [
