--- a/examples/cli/package.json
+++ b/examples/cli/package.json
@@ -43,14 +43,13 @@
     "@mediapipe/tasks-audio": "catalog:",
     "@mediapipe/tasks-genai": "catalog:",
     "@sroussey/transformers": "catalog:",
-    "@types/react": "=19.2.14",
+    "@types/react": "^19.2.14",
     "chalk": "^5.6.2",
     "commander": "^14.0.3",
     "ink": "^6.7.0",
     "is-unicode-supported": "^2.1.0",
-    "react": "=19.2.1",
-    "react-reconciler": "=0.33.0",
-    "react-devtools-core": "=4.28.4"
+    "react": "^19.2.4",
+    "react-reconciler": "^0.33.0"
   },
   "publishConfig": {
     "access": "public"
