[fix] missing dep for ink

--- a/examples/cli/package.json
+++ b/examples/cli/package.json
@@ -48,7 +48,8 @@
     "ink": "^6.7.0",
     "is-unicode-supported": "^2.1.0",
     "react": "^19.2.4",
-    "react-reconciler": "^0.33.0"
+    "react-reconciler": "^0.33.0",
+    "react-devtools-core": "^7.0.1"
   },
   "publishConfig": {
     "access": "public"
