--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -38,5 +38,8 @@
   "dependencies": {
     "@sroussey/json-schema-library": "^10.5.3",
     "@sroussey/json-schema-to-ts": "3.1.4"
+  },
+  "peerDependencies": {
+    "@modelcontextprotocol/sdk": "^1.26.0"
   }
 }
