[chore] Update package dependencies and types
- Added @modelcontextprotocol/sdk and pg as catalog dependencies in multiple package.json files.
- Changed pg and @supabase/supabase-js to use catalog references in peerDependencies for consistency.
- Updated type imports for Pool from pg to use type-only imports in PostgresQueueStorage and PostgresRateLimiterStorage.
- Removed redundant uuid4 type definition from ITabularStorage and updated uuid4 function to return a typed uuid4 in Crypto files.
- Cleaned up common.ts by removing the export of uuid4 to resolve ambiguity.

--- a/packages/workglow/package.json
+++ b/packages/workglow/package.json
@@ -82,6 +82,7 @@
     "@workglow/util": "workspace:*"
   },
   "peerDependencies": {
+    "@modelcontextprotocol/sdk": "catalog:",
     "@sroussey/transformers": "catalog:",
     "@mediapipe/tasks-text": "catalog:",
     "@mediapipe/tasks-vision": "catalog:",
@@ -91,10 +92,11 @@
     "@anthropic-ai/sdk": "catalog:",
     "@google/generative-ai": "catalog:",
     "ollama": "catalog:",
+    "node-llama-cpp": "catalog:",
     "@sqlite.org/sqlite-wasm": "^3.51.2-build6",
     "better-sqlite3": "^12.6.2",
     "pg": "^8.18.0",
-    "@supabase/supabase-js": "=2.95.3"
+    "@supabase/supabase-js": "catalog:"
   },
   "peerDependenciesMeta": {
     "@sroussey/transformers": {
@@ -122,6 +124,9 @@
       "optional": true
     },
     "ollama": {
+      "optional": true
+    },
+    "node-llama-cpp": {
       "optional": true
     },
     "@sqlite.org/sqlite-wasm": {
