--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@anthropic-ai/sdk": "^0.74.0",
     "@google/generative-ai": "^0.24.1",
     "ollama": "^0.6.3",
-    "openai": "^6.22.0"
+    "openai": "^6.22.0",
+    "@modelcontextprotocol/sdk": "^1.26.0",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@sroussey/changesets-cli": "^2.29.7",
