--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -22,8 +22,8 @@
   "peerDependencies": {
     "@workglow/sqlite": "workspace:*",
     "@workglow/util": "workspace:*",
-    "pg": "^8.18.0",
-    "@supabase/supabase-js": "=2.96.0"
+    "pg": "catalog:",
+    "@supabase/supabase-js": "catalog:"
   },
   "peerDependenciesMeta": {
     "@workglow/sqlite": {
@@ -36,9 +36,9 @@
   "devDependencies": {
     "@workglow/sqlite": "workspace:*",
     "@workglow/util": "workspace:*",
-    "pg": "^8.18.0",
+    "pg": "catalog:",
     "@types/pg": "^8.16.0",
-    "@supabase/supabase-js": "=2.96.0",
+    "@supabase/supabase-js": "catalog:",
     "fake-indexeddb": "^6.2.4"
   },
   "exports": {
