--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -40,6 +40,11 @@
     "@sroussey/json-schema-to-ts": "3.1.4"
   },
   "peerDependencies": {
-    "@modelcontextprotocol/sdk": "^1.26.0"
+    "@modelcontextprotocol/sdk": "catalog:"
+  },
+  "peerDependenciesMeta": {
+    "@modelcontextprotocol/sdk": {
+      "optional": true
+    }
   }
 }
