[chore] Add sideEffects flag to package.json files
- Added "sideEffects": false to package.json files for @workglow/ai-provider, @workglow/debug, @workglow/job-queue, and @workglow/sqlite to optimize tree-shaking and improve build performance.

--- a/packages/sqlite/package.json
+++ b/packages/sqlite/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@workglow/sqlite",
   "type": "module",
+  "sideEffects": false,
   "version": "0.0.97",
   "description": "SQLite database providing cross-platform database support for browser, Node.js, and Bun environments.",
   "scripts": {
