--- a/packages/ai-provider/package.json
+++ b/packages/ai-provider/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@workglow/ai-provider",
   "type": "module",
+  "sideEffects": false,
   "version": "0.0.97",
   "description": "AI provider integrations for Workglow, supporting OpenAI, Hugging Face Transformers, MediaPipe, and GGML models.",
   "scripts": {
