--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@workglow/debug",
   "type": "module",
+  "sideEffects": false,
   "version": "0.0.97",
   "description": "Debug utilities for Workglow, including Chrome DevTools custom formatters for task graphs and workflows.",
   "scripts": {
