--- a/packages/job-queue/package.json
+++ b/packages/job-queue/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@workglow/job-queue",
   "type": "module",
+  "sideEffects": false,
   "version": "0.0.97",
   "description": "Job queue management for Workglow, handling task scheduling, execution, and distributed processing.",
   "scripts": {
